--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -36,7 +36,8 @@ porter-ci 工具产品需求文档
   - 配置文件内容中包含同步的配置信息。
   - 配置文件内容必须是合法的 json 格式。
   - 配置信息包含以下字段：
-    - `projectName`：项目的名称，用于在同步时提示用户。
+    - `projectName``：项目的名称，用于在同步时提示用户。
+    - `commit-id`：指定从当前项目当前分支哪次 commit 开始同步。如果不指定，默认从当前项目当前分支的创建开始新增的第一个 commit 开始同步。可选项。
     - `targetProjects`：要同步的目标项目列表，每个项目包含以下字段：
       - `projectName`：项目的名称，用于在同步时提示用户。必须指定。
       - `projectPath`：项目的路径，用于指定要同步的项目路径。必须指定。
@@ -52,14 +53,15 @@ porter-ci 工具产品需求文档
 
 ### 同步代码
 
-- 把上一步读取到的新增的提交，根据配置文件中的信息，批量提交应用到目标项目中。
+- 把上一步读取到的新增的提交，根据配置文件中的配置信息，批量提交应用到目标项目中。
   - 当前项目的当前分支自创建以来，新增的提交都需要同步到其他项目中。
   - `git cherry-pick` 批量提交。
 - 遇到冲突时，porter-ci 会提示用户具体哪个目标项目冲突，用户手动解决冲突。
 - 解决冲突后，需要用户手动提交变更到目标项目中。
 - 没有冲突时，porter-ci 会自动提交到目标项目中。
 - 提交完成后，由用户手动校验代码，确认无误后，再手动合并到目标项目的分支中。
-- porter-ci 只负责代码的同步，不负责代码的合并。
+- porter-ci 只负责代码的同步，不负责代码的提交和推送远程分支。
+- 同步完成后，提示用户同步完成。
 
 ## 技术栈
 
