--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -8,8 +8,8 @@ porter-ci 工具产品需求文档
 
 ## 使用流程
 
-- 用户在项目根目录下执行 `porter-ci` 命令，porter-ci 会自动读取项目的配置文件 `.porter-ci.config.json`。
-- porter-ci 会根据配置文件中的信息，以当前项目的分支的代码变更为基准，将变更应用到其他项目中。
+- 用户在任意目录下执行 `porter-ci` 命令，porter-ci 会自动读取项目的配置文件 `.porter-ci.config.json`。
+- porter-ci 会根据配置文件中的 projectPath 字段指定的项目为源项目，以该项目的分支的代码变更为基准，将变更应用到其他项目中。
 - 同步完成后， porter-ci 会提示用户同步成功。
 
 ## 实现流程
@@ -19,32 +19,33 @@ porter-ci 工具产品需求文档
 ### 启动工具
 
 - `porter-ci`启动时，进行必要的提示
-  - 读取当前项目的名称、当前项目分支的名称。提示用户当前项目的名称、当前项目分支的名称，确认无误后继续。
+  - 读取配置文件中 projectPath 字段指定的源项目的名称、分支名称。提示用户源项目的名称、分支名称，确认无误后继续。
   - 询问用户是否填写 porter-ci 配置文件
   - 询问是否启动同步
 - 以上信息都确认无误后，开始同步代码。
 
 ### 读取并检查信息
 
-- 读取当前项目的信息
-  - 读取当前项目的名称、当前项目分支的名称。
-  - 读取当前项目的自创建以来新增的 git commit 信息
-- 检查当前项目的信息
-  - 检查当前项目的分支自创建以来，是否有新增的提交。必须有新增的提交，否则会抛错提示用户。
+- 读取源项目的信息
+  - 读取配置文件中 projectPath 字段指定的源项目的名称、分支的名称。
+  - 读取源项目的自创建以来新增的 git commit 信息
+- 检查源项目的信息
+  - 检查源项目的分支自创建以来，是否有新增的提交。必须有新增的提交，否则会抛错提示用户。
 - 读取项目的配置文件信息。
-  - 配置文件为 .porter-ci.config.json, 且该文件需要放在项目的根目录下。参考 [示例配置文件](./.porter-ci.config.json)
+  - 配置文件为 .porter-ci.config.json，可以放在任意目录下。参考 [示例配置文件](./.porter-ci.config.json)
   - 配置文件内容中包含同步的配置信息。
   - 配置文件内容必须是合法的 json 格式。
   - 配置信息包含以下字段：
-    - `projectName``：项目的名称，用于在同步时提示用户。
-    - `commit-id`：指定从当前项目当前分支哪次 commit 开始同步。如果不指定，默认从当前项目当前分支的创建开始新增的第一个 commit 开始同步。可选项。
+    - `projectPath`：源项目的目录路径，指向同步的源项目。必填项，不填报错。
+    - `projectName`：源项目的名称，用于在同步时提示用户。可选项，默认从源项目的 package.json 或 git remote 获取。
+    - `commit-id`：指定从源项目当前分支哪次 commit 开始同步。如果不指定，默认从源项目当前分支的创建开始新增的第一个 commit 开始同步。可选项。
     - `targetProjects`：要同步的目标项目列表，每个项目包含以下字段：
       - `projectName`：项目的名称，用于在同步时提示用户。必须指定。
       - `projectPath`：项目的路径，用于指定要同步的项目路径。必须指定。
       - `branch`：要同步的目标分支，必须指定。分支名称不应包含`master`、`test`等关键字，否则会抛错提示用户分支名称不对。
 - 检查项目的配置文件信息。
   - 检查配置文件格式是否正确、必要字段是否存在
-  - 检查当前项目的分支名称是否符合规范，是否包含`master`、`test`等关键字。
+  - 检查源项目的分支名称是否符合规范，是否包含`master`、`test`等关键字。
 - 以上任意检查一旦不通过，抛错提示用户做出相应修改
   - 检查阶段抛错后，ci 工具退出并停止运行，不继续执行同步代码。
   - 用户需要重新执行 porter-ci 命令。
@@ -54,7 +55,7 @@ porter-ci 工具产品需求文档
 ### 同步代码
 
 - 把上一步读取到的新增的提交，根据配置文件中的配置信息，批量提交应用到目标项目中。
-  - 当前项目的当前分支自创建以来，新增的提交都需要同步到其他项目中。
+  - 源项目的当前分支自创建以来，新增的提交都需要同步到其他项目中。
   - `git cherry-pick` 批量提交。
 - 遇到冲突时，porter-ci 会提示用户具体哪个目标项目冲突，用户手动解决冲突。
 - 解决冲突后，需要用户手动提交变更到目标项目中。
