--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -55,14 +55,26 @@ porter-ci 工具产品需求文档
 ### 同步代码
 
 - 把上一步读取到的新增的提交，根据配置文件中的配置信息，批量提交应用到目标项目中。
-  - 源项目的当前分支自创建以来，新增的提交都需要同步到其他项目中。
-  - `git cherry-pick` 批量提交。
-- 遇到冲突时，porter-ci 会提示用户具体哪个目标项目冲突，用户手动解决冲突。
-- 解决冲突后，需要用户手动提交变更到目标项目中。
-- 没有冲突时，porter-ci 会自动提交到目标项目中。
-- 提交完成后，由用户手动校验代码，确认无误后，再手动合并到目标项目的分支中。
-- porter-ci 只负责代码的同步，不负责代码的提交和推送远程分支。
-- 同步完成后，提示用户同步完成。
+  - 源项目的当前分支的指定提交，都需要同步到其他项目中。
+    - 如果指定了 commit-id，从指定的 commit-id 开始同步。
+    - 如果没有指定 commit-id，从源项目当前分支的创建开始新增的第一个 commit 开始同步。
+  - 如果配置文件配置的目标项目存在多个，也需要依次一个个同步，串行，非并行。
+  - 批量提交这里需要明确下：
+    - 不是一次性的提交，而是每次提交一个 commit。
+    - 如果失败，提示用户手动解决，等待用户手动解决问题后，再继续提交下一个 commit。
+      - 等待用户手动解决的时候，工具程序不应该退出，需要明确提示用户，除非用户选择退出。
+      - 用户手动解决问题后，默认当前提交处理成功，工具程序应该继续执行下一个提交。
+      - 关于失败的处理，这里有个特殊的情况，就是 执行`git cherry-pick`，遇到冲突，就会抛错，但是明明是代码冲突导致的报错，抛的错误却没有明确报代码冲突，也不会自动打印清晰的“CONFLICT”提示
+        - 这里提供一个修正方案：捕获 `git cherry-pick` 失败，并主动检测冲突标记
+          - 检测方法：检查 `git cherry-pick` 命令如果发生报错，就检测是否差异文件包含冲突标记
+          - 如果检测到冲突标记，就是自动认为是合并冲突导致的报错，提示用户手动解决合并冲突。
+        - 如果是代码冲突导致的报错，要明确提示出来是代码冲突导致的失败，提示用户手动解决代码冲突。
+    - 如果成功，使用 `git add .` 将代码暂存，然后再执行下一次提交。
+    - 如此往复，直到全部提交完成。
+  - 利用`git cherry-pick`命令，将源项目的提交应用到目标项目中。
+- porter-ci 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
+- 同步完成后，提示用户同步完成，用户需人工确认代码并提交代码。
+- 最后退出程序。
 
 ## 技术栈
 
