--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -1,16 +1,16 @@
-porter-ci 工具产品需求文档
+porter 工具产品需求文档
 
 ## 功能描述
 
-- porter-ci 是一个基于 git 实现跨项目代码功能同步的 ci 工具。
-- porter-ci 可以实现跨项目的代码功能同步，例如：当一个项目的代码发生改变时， porter-ci 可以自动将该项目的代码同步到其他目标项目中。
+- porter 是一个基于 git 实现跨项目代码功能同步的 ci 工具。
+- porter 可以实现跨项目的代码功能同步，例如：当一个项目的代码发生改变时， porter 可以自动将该项目的代码同步到其他目标项目中。
 - 实现同步的原理是依赖 git cherry-pick 命令，将一个项目的代码变更应用到其他项目中。遇到冲突，需要用户手动解决冲突
 
 ## 使用流程
 
-- 用户在任意目录下执行 `porter-ci` 命令，porter-ci 会自动读取项目的配置文件 `.porter-ci.config.json`。
-- porter-ci 会根据配置文件中的 projectPath 字段指定的项目为源项目，以该项目的分支的代码变更为基准，将变更应用到其他项目中。
-- 同步完成后， porter-ci 会提示用户同步成功。
+- 用户在任意目录下执行 `porter` 命令，porter 会自动读取项目的配置文件 `porter.config.json`。
+- porter 会根据配置文件中的 projectPath 字段指定的项目为源项目，以该项目的分支的代码变更为基准，将变更应用到其他项目中。
+- 同步完成后， porter 会提示用户同步成功。
 
 ## 实现流程
 
@@ -18,9 +18,9 @@ porter-ci 工具产品需求文档
 
 ### 启动工具
 
-- `porter-ci`启动时，进行必要的提示
+- `porter`启动时，进行必要的提示
   - 读取配置文件中 projectPath 字段指定的源项目的名称、分支名称。提示用户源项目的名称、分支名称，确认无误后继续。
-  - 询问用户是否填写 porter-ci 配置文件
+  - 询问用户是否填写 porter 配置文件
   - 询问是否启动同步
 - 以上信息都确认无误后，开始同步代码。
 
@@ -32,7 +32,7 @@ porter-ci 工具产品需求文档
 - 检查源项目的信息
   - 检查源项目的分支自创建以来，是否有新增的提交。必须有新增的提交，否则会抛错提示用户。
 - 读取项目的配置文件信息。
-  - 配置文件为 .porter-ci.config.json，可以放在任意目录下。参考 [示例配置文件](./.porter-ci.config.json)
+  - 配置文件为 porter.config.json，可以放在任意目录下。参考 [示例配置文件](./porter.config.json)
   - 配置文件内容中包含同步的配置信息。
   - 配置文件内容必须是合法的 json 格式。
   - 配置信息包含以下字段：
@@ -48,7 +48,7 @@ porter-ci 工具产品需求文档
   - 检查源项目的分支名称是否符合规范，是否包含`master`、`test`等关键字。
 - 以上任意检查一旦不通过，抛错提示用户做出相应修改
   - 检查阶段抛错后，ci 工具退出并停止运行，不继续执行同步代码。
-  - 用户需要重新执行 porter-ci 命令。
+  - 用户需要重新执行 porter 命令。
   - 以上`启动工具-读取并检查信息`过程，用户重复执行，直至用户信息全部校验通过，再进行下一步
 - 检查通过后，提示用户检查通过，进行同步流程。
 
@@ -72,7 +72,7 @@ porter-ci 工具产品需求文档
     - 如果成功，使用 `git add .` 将代码暂存，然后再执行下一次提交。
     - 如此往复，直到全部提交完成。
   - 利用`git cherry-pick`命令，将源项目的提交应用到目标项目中。
-- porter-ci 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
+- porter 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
 - 同步完成后，提示用户同步完成，用户需人工确认代码并提交代码。
 - 最后退出程序。
 
@@ -90,7 +90,7 @@ porter-ci 工具产品需求文档
 
 ## 项目规范
 
-- package.json 中必须包含 `bin` 字段，指定 cli 命令的名称为 `porter-ci`。
+- package.json 中必须包含 `bin` 字段，指定 cli 命令的名称为 `porter`。
 - package.json 文件需要包含项目必要的信息，例如：项目名称、项目描述、项目版本、项目依赖、启动调试打包等脚本命令。保证开发者可以方便地开发、调试 cli 工具。
 - 代码需要包含必要的注释、说明文档。方便开发者理解。
   - 注释需要包含必要的信息，例如：函数的参数、返回值、异常等。
