--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -16,36 +16,55 @@ porter 工具产品需求文档
 
 实现流程分为以下几个步骤：启动工具、读取并检查信息、同步代码
 
+### 功能设计实现原则
+
+- **约定优于配置**
+  - 配置文件`porter.config.json`
+    - 配置文件为 porter.config.json，可以放在任意目录下。详细定义参考 [示例配置文件]
+    - 配置文件定义了同步的源项目和目标项目的配置信息。
+    - 配置信息重点字段描述，如下：
+      - `projectName`：源项目的名称，用于在同步时提示用户。必填项，不填报错。
+      - `projectPath`：源项目的目录路径，指向同步的源项目。必填项，不填报错。
+      - `branch`：源项目的分支，必须指定。必填项，不填报错。分支名称，无特殊要求
+      - `commit-id`：指定从源项目指定分支哪次 commit 开始同步。选填项，如果不指定，默认从源项目指定分支的创建开始新增的第一个 commit 开始同步。
+      - `targetProjects`：要同步的目标项目列表，每个项目包含以下字段：
+        - `projectName`：项目的名称，用于在同步时提示用户。必填项，不填报错。
+        - `projectPath`：项目的路径，用于指定要同步的项目路径。必填项，不填报错。
+        - `branch`：要同步的目标分支。必填项，不填报错。
+          - 分支名称不应包含`master`、`test`等关键字，否则会抛错提示用户分支名称不对。
+- **少即是多**
+  - 能在`读取并检查信息`这一步提前发现问题，就在这一步拦截提示，省去同步时复杂的处理流程，减少不可控因素。
+
 ### 启动工具
 
 - `porter`启动时，进行必要的提示
-  - 读取配置文件中 projectPath 字段指定的源项目的名称、分支名称。提示用户源项目的名称、分支名称，确认无误后继续。
   - 询问用户是否填写 porter 配置文件
-  - 询问是否启动同步
-- 以上信息都确认无误后，开始同步代码。
+    - 如果用户没有填写 porter 配置文件，进行如下操作：
+      - 询问用户是否要创建一个 porter 配置文件。
+        - 如果用户选择创建，按照[示例配置文件]在当前目录创建一个 porter.config.json 文件。
+          - 执行复制文件操作。
+        - 如果用户选择不创建，提示用户稍后手动创建配置文件，ci 工具退出并停止运行。
+  - 读取配置文件中 源项目的名称、分支名称。提示用户源项目的名称、分支名称。
+  - 用户确认无误后，询问是否启动同步
 
 ### 读取并检查信息
 
-- 读取源项目的信息
-  - 读取配置文件中 projectPath 字段指定的源项目的名称、分支的名称。
-  - 读取源项目的自创建以来新增的 git commit 信息
-- 检查源项目的信息
-  - 检查源项目的分支自创建以来，是否有新增的提交。必须有新增的提交，否则会抛错提示用户。
 - 读取项目的配置文件信息。
-  - 配置文件为 porter.config.json，可以放在任意目录下。参考 [示例配置文件](./porter.config.json)
-  - 配置文件内容中包含同步的配置信息。
-  - 配置文件内容必须是合法的 json 格式。
-  - 配置信息包含以下字段：
-    - `projectPath`：源项目的目录路径，指向同步的源项目。必填项，不填报错。
-    - `projectName`：源项目的名称，用于在同步时提示用户。可选项，默认从源项目的 package.json 或 git remote 获取。
-    - `commit-id`：指定从源项目当前分支哪次 commit 开始同步。如果不指定，默认从源项目当前分支的创建开始新增的第一个 commit 开始同步。可选项。
-    - `targetProjects`：要同步的目标项目列表，每个项目包含以下字段：
-      - `projectName`：项目的名称，用于在同步时提示用户。必须指定。
-      - `projectPath`：项目的路径，用于指定要同步的项目路径。必须指定。
-      - `branch`：要同步的目标分支，必须指定。分支名称不应包含`master`、`test`等关键字，否则会抛错提示用户分支名称不对。
 - 检查项目的配置文件信息。
-  - 检查配置文件格式是否正确、必要字段是否存在
-  - 检查源项目的分支名称是否符合规范，是否包含`master`、`test`等关键字。
+  - 检查配置文件格式是否正确、必要字段是否存在，检查不对，抛错提示用户，退出运行。
+- 检查源项目
+  - 检查源项目是否存在。不存在，抛错提示用户，退出运行。
+  - 检查源项目的分支是否存在。不存在，抛错提示用户，退出运行。
+  - 检查源项目的分支自创建以来，是否有新增的提交。必须有新增的提交，否则，抛错提示用户，退出运行。
+  - 检查源项目 `commit-id` 是否存在。
+    - 如果指定了 commit-id，检查该 commit-id 是否仓库存在。不存在，抛错提示用户，退出运行。
+- 检查目标项目
+  - 检查目标项目是否存在。不存在，抛错提示用户，退出运行。
+  - 检查目标项目的分支是否存在。不存在，抛错提示用户，退出运行。
+  - 分支名称是否符合规范，是否包含`master`、`test`等关键字。如果包含，抛错提示用户，退出运行。
+  - 目标项目可能存在多个，每个项目都要依次执行上述`检查目标项目`流程。
+    - 如果有项目检查失败，抛错提示用户，退出运行。
+    - 全部检查成功，继续下一步。
 - 以上任意检查一旦不通过，抛错提示用户做出相应修改
   - 检查阶段抛错后，ci 工具退出并停止运行，不继续执行同步代码。
   - 用户需要重新执行 porter 命令。
@@ -54,31 +73,34 @@ porter 工具产品需求文档
 
 ### 同步代码
 
-- 把上一步读取到的新增的提交，根据配置文件中的配置信息，批量提交应用到目标项目中。
-  - 源项目的当前分支的指定提交，都需要同步到其他项目中。
-    - 如果指定了 commit-id，从指定的 commit-id 开始同步。
-    - 如果没有指定 commit-id，从源项目当前分支的创建开始新增的第一个 commit 开始同步。
-  - 如果配置文件配置的目标项目存在多个，也需要依次一个个同步，串行，非并行。
-  - 批量提交这里需要明确下：
-    - 不是一次性的提交，而是每次提交一个 commit。
-    - 如果失败，提示用户手动解决，等待用户手动解决问题后，再继续提交下一个 commit。
-      - 等待用户手动解决的时候，工具程序不应该退出，需要明确提示用户，除非用户选择退出。
-      - 用户手动解决问题后，默认当前提交处理成功，工具程序应该继续执行下一个提交。
-      - 关于失败的处理，这里有个特殊的情况，就是 执行`git cherry-pick`，遇到冲突，就会抛错，但是明明是代码冲突导致的报错，抛的错误却没有明确报代码冲突，也不会自动打印清晰的“CONFLICT”提示
-        - 这里提供一个修正方案：捕获 `git cherry-pick` 失败，并主动检测冲突标记
-          - 检测方法：检查 `git cherry-pick` 命令如果发生报错，就检测是否差异文件包含冲突标记
-          - 如果检测到冲突标记，就是自动认为是合并冲突导致的报错，提示用户手动解决合并冲突。
-        - 如果是代码冲突导致的报错，要明确提示出来是代码冲突导致的失败，提示用户手动解决代码冲突。
-    - 如果成功，使用 `git add .` 将代码暂存，然后再执行下一次提交。
-    - 如此往复，直到全部提交完成。
-  - 利用`git cherry-pick`命令，将源项目的提交应用到目标项目中。
+- 根据配置文件中的配置信息，将所有的提交 commit 遴选到目标项目的指定分支中。
+- 利用`git cherry-pick`命令，将源项目的提交应用到目标项目中。
+- 源项目的指定提交获取逻辑，描述如下：
+  - 如果指定了 commit-id，从指定的 commit-id 开始同步。
+  - 如果没有指定 commit-id，从源项目指定分支的创建开始新增的第一个 commit 开始同步。
+- 如果配置文件配置的目标项目存在多个，也需要依次一个个项目、一个个提交进行同步，串行，非并行。
+- 同步代码逻辑，做如下约定：
+  - 不是一次性的提交，而是每次提交一个 commit。
+  - 如果同步失败，提示用户手动解决，等待用户手动解决问题后，再继续提交下一个 commit。
+    - 等待用户手动解决的时候，工具程序不应该退出，需要利用`inquirer.prompt`等工具让用户对解决的结果做选择，提供操作选项，如下：
+      - 继续同步: 继续同步下一个提交。
+      - 取消当前同步: 取消当前同步操作，进行下一个提交同步。类似于跳过功能。
+      - 退出程序: 直接退出程序。
+    - 用户手动解决问题后，选择继续同步，默认当前提交处理成功，工具程序应该继续执行下一个提交。
+    - 关于失败的处理，这里有个特殊的情况，就是 执行`git cherry-pick`，遇到冲突，就会抛错，但是明明是代码冲突导致的报错，抛的错误却没有明确报代码冲突，也不会自动打印清晰的“CONFLICT”提示，这里提供一个修正方案：
+      - 捕获 `git cherry-pick` 失败报错
+      - 如果明确是代码冲突导致的报错，要明确提示出来是代码冲突导致的失败，提示用户手动解决代码冲突。
+      - 否则，主动检测冲突标记，检测是否差异文件包含冲突标记
+      - 如果检测到冲突标记，就是认为是合并冲突导致的报错，提示用户手动解决合并冲突。
+  - 如果成功，使用 `git add .` 将代码暂存，然后再执行下一次提交。
+  - 如此往复，直到全部提交完成。
 - porter 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
-- 同步完成后，提示用户同步完成，用户需人工确认代码并提交代码。
+- 同步完成后，提示用户同步完成，提示用户需人工确认代码并提交代码。
 - 最后退出程序。
 
 ## 技术栈
 
-- 使用 node.js 实现工具的功能。且 node 版本需要 22 版本以上，建议使用 22.18.0 版本。
+- 使用 node.js 实现工具的功能。node 版本需要 22 版本以上，建议使用 22.18.0 版本。
 - 使用 nvm 工具管理 node 版本需要项目显式指定 node 版本，例如：在项目根目录下创建 .nvmrc 文件，文件内容为 22.18.0。
 - 使用 pnpm 工具管理项目依赖
 - 使用当前构建 cli 包流行的构建技术，打包构建代码。如 vite 等。
@@ -91,7 +113,13 @@ porter 工具产品需求文档
 ## 项目规范
 
 - package.json 中必须包含 `bin` 字段，指定 cli 命令的名称为 `porter`。
-- package.json 文件需要包含项目必要的信息，例如：项目名称、项目描述、项目版本、项目依赖、启动调试打包等脚本命令。保证开发者可以方便地开发、调试 cli 工具。
+- package.json 文件需要包含项目必要的信息
+  - 例如：项目名称、项目描述、项目版本、项目依赖、启动调试打包等脚本命令。
+  - 保证开发者可以方便地开发、调试 cli 工具。
 - 代码需要包含必要的注释、说明文档。方便开发者理解。
   - 注释需要包含必要的信息，例如：函数的参数、返回值、异常等。
   - 说明文档需要包含必要的信息，例如：使用流程、实现流程等。
+
+<!-- 参考链接 -->
+
+[示例配置文件]: /src/template/porter.config.json
