feat: 增加重试当前步骤的功能

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -86,6 +86,7 @@ porter 工具产品需求文档
       - 继续同步: 继续同步下一个提交。
       - 取消当前同步: 取消当前同步操作，进行下一个提交同步。类似于跳过功能。
       - 退出程序: 直接退出程序。
+      - 重新再试: 重新执行当前提交。
     - 用户手动解决问题后，选择继续同步，默认当前提交处理成功，工具程序应该继续执行下一个提交。
     - 关于失败的处理，这里有个特殊的情况，就是 执行`git cherry-pick`，遇到冲突，就会抛错，但是明明是代码冲突导致的报错，抛的错误却没有明确报代码冲突，也不会自动打印清晰的“CONFLICT”提示，这里提供一个修正方案：
       - 捕获 `git cherry-pick` 失败报错
