feat: 检测目标项目是否存在未提交的代码，存在就不能下一步；

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -61,7 +61,8 @@ porter 工具产品需求文档
 - 检查目标项目
   - 检查目标项目是否存在。不存在，抛错提示用户，退出运行。
   - 检查目标项目的分支是否存在。不存在，抛错提示用户，退出运行。
-  - 分支名称是否符合规范，是否包含`master`、`test`等关键字。如果包含，抛错提示用户，退出运行。
+  - 检查目标项目的分支名称是否符合规范，是否包含`master`、`test`等关键字。如果包含，抛错提示用户，退出运行。
+  - 检查目标项目的分支是否有没有`git add`的变更。如果有，抛错提示用户，退出运行。
   - 目标项目可能存在多个，每个项目都要依次执行上述`检查目标项目`流程。
     - 如果有项目检查失败，抛错提示用户，退出运行。
     - 全部检查成功，继续下一步。
