修复用户退出程序时未清理临时远程仓库的问题

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -82,6 +82,11 @@ porter 工具产品需求文档
 - 如果配置文件配置的目标项目存在多个，也需要依次一个个项目、一个个提交进行同步，串行，非并行。
 - 同步代码逻辑，做如下约定：
   - 不是一次性的提交，而是每次提交一个 commit。
+  - 如果是跨项目同步代码，采用添加临时远程仓库方案，具体示例参考[跨项目遴选代码示例](./跨项目遴选代码示例.md)，而不是直接从项目的分支上 cherry-pick。
+  - 跨项目同步时生成的临时远程仓库管理：
+    - 无论同步过程是否成功、是否中途失败退出，都必须确保临时远程仓库被正确清理
+    - 程序正常完成同步后，必须清理临时远程仓库
+    - 程序因任何错误（如代码冲突、用户中断、系统错误等）退出前，必须清理临时远程仓库
   - 如果同步失败，提示用户手动解决，等待用户手动解决问题后，再继续提交下一个 commit。
     - 等待用户手动解决的时候，工具程序不应该退出，需要利用`inquirer.prompt`等工具让用户对解决的结果做选择，提供操作选项，如下：
       - 继续同步: 继续同步下一个提交。
