--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -26,9 +26,14 @@ porter 工具产品需求文档
       - `projectName`：源项目的名称，用于在同步时提示用户。必填项，不填报错。
       - `projectPath`：源项目的目录路径，指向同步的源项目。必填项，不填报错。
       - `branch`：源项目的分支，必须指定。必填项，不填报错。分支名称，无特殊要求
-      - `commit-id`：指定从源项目指定分支哪次 commit 开始同步。选填项，如果不指定，默认从源项目指定分支的创建开始新增的第一个 commit 开始同步。
-        - 支持完整的 commit-id（如 e3c71183b6b2c1c1d2e3f4a5b6c7d8e9f0a1b2c3）
-        - 支持短 commit-id（如 e3c7118），工具会自动识别并扩展为完整的 commit-id
+      - `commit-id`：指定同步的 commit 范围或自定义提交列表。选填项，如果不指定，默认从源项目指定分支的创建开始新增的第一个 commit 开始同步。
+        - 字符串格式：指定从该 commit 开始同步（包括该 commit）
+          - 支持完整的 commit-id（如 e3c71183b6b2c1c1d2e3f4a5b6c7d8e9f0a1b2c3）
+          - 支持短 commit-id（如 e3c7118），工具会自动识别并扩展为完整的 commit-id
+        - 数组格式：指定要同步的具体 commit-id 列表
+          - 每个元素可以是完整或短的 commit-id
+          - 工具将按照数组中的顺序同步这些提交
+          - 示例：`["e3c7118", "a1b2c3d", "4567890"]`
       - `targetProjects`：要同步的目标项目列表，每个项目包含以下字段：
         - `projectName`：项目的名称，用于在同步时提示用户。必填项，不填报错。
         - `projectPath`：项目的路径，用于指定要同步的项目路径。必填项，不填报错。
