feat: 丰富porter命令行，支持查看版本号和帮助信息

--- a/需求文档/需求实现流程.md
+++ b/需求文档/需求实现流程.md
@@ -2,7 +2,7 @@
 
 - 寻找[todoList.md](todoList.md)中的`功能优化`待完成需求
   - 先查看该功能是否已实现，若已实现，提示用户该功能已完成，无需重复实现
-- 补充待完成需求的相关文档到[需求文档](../../需求文档/工具产品需求文档.md)
+- 根据待完成需求，补充相关文档到[需求文档](../../需求文档/工具产品需求文档.md)
   - 注意参考需求文档其他功能，保持文档的一致性和完整性
 - 实现待完成需求
 - 测试实现的功能
