feat: 集成commitlint和conventional提交规范

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -121,8 +121,11 @@ porter 工具产品需求文档
 - 使用 typescript 实现代码的类型检查。
 - 使用 eslint 工具检查代码质量。
 - 使用 prettier 工具格式化代码。
-- 使用 husky 工具在提交代码前，自动检查代码质量。
 - 使用 git 命令行工具实现代码的同步。
+- 在项目中集成 husky+lint-staged+prettier+eslint+@commitlint/cli + conventional 规则 的工具，用于提高代码质量，规范提交信息。要求如下：
+  - husky 使用 7.0.x 版本
+  - lint-staged 使用 9.0.x 版本
+  - prettier 使用 2.5.X 版本
 
 ## 项目规范
 
