chore: 更改项目名称、ci 命令名称

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -1,16 +1,16 @@
-porter 工具产品需求文档
+porter-ci 工具产品需求文档
 
 ## 功能描述
 
-- porter 是一个基于 git 实现跨项目代码功能同步的 ci 工具。
-- porter 可以实现跨项目的代码功能同步，例如：当一个项目的代码发生改变时， porter 可以自动将该项目的代码同步到其他目标项目中。
+- porter-ci 是一个基于 git 实现跨项目代码功能同步的 ci 工具。
+- porter-ci 可以实现跨项目的代码功能同步，例如：当一个项目的代码发生改变时， porter-ci 可以自动将该项目的代码同步到其他目标项目中。
 - 实现同步的原理是依赖 git cherry-pick 命令，将一个项目的代码变更应用到其他项目中。遇到冲突，需要用户手动解决冲突
 
 ## 使用流程
 
-- 用户在任意目录下执行 `porter` 命令，porter 会自动读取项目的配置文件 `porter.config.json`。
-- porter 会根据配置文件中的 projectPath 字段指定的项目为源项目，以该项目的分支的代码变更为基准，将变更应用到其他项目中。
-- 同步完成后， porter 会提示用户同步成功。
+- 用户在任意目录下执行 `porter-ci` 命令，porter-ci 会自动读取项目的配置文件 `porter-ci.config.json`。
+- porter-ci 会根据配置文件中的 projectPath 字段指定的项目为源项目，以该项目的分支的代码变更为基准，将变更应用到其他项目中。
+- 同步完成后， porter-ci 会提示用户同步成功。
 
 ## 实现流程
 
@@ -19,8 +19,8 @@ porter 工具产品需求文档
 ### 功能设计实现原则
 
 - **约定优于配置**
-  - 配置文件`porter.config.json`
-    - 配置文件为 porter.config.json，可以放在任意目录下。详细定义参考 [示例配置文件]
+  - 配置文件`porter-ci.config.json`
+    - 配置文件为 porter-ci.config.json，可以放在任意目录下。详细定义参考 [示例配置文件]
     - 配置文件定义了同步的源项目和目标项目的配置信息。
     - 配置信息重点字段描述，如下：
       - `projectName`：源项目的名称，用于在同步时提示用户。必填项，不填报错。
@@ -44,11 +44,11 @@ porter 工具产品需求文档
 
 ### 启动工具
 
-- `porter`启动时，进行必要的提示
-  - 询问用户是否填写 porter 配置文件
-    - 如果用户没有填写 porter 配置文件，进行如下操作：
-      - 询问用户是否要创建一个 porter 配置文件。
-        - 如果用户选择创建，按照[示例配置文件]在当前目录创建一个 porter.config.json 文件。
+- `porter-ci`启动时，进行必要的提示
+  - 询问用户是否填写 porter-ci 配置文件
+    - 如果用户没有填写 porter-ci 配置文件，进行如下操作：
+      - 询问用户是否要创建一个 porter-ci 配置文件。
+        - 如果用户选择创建，按照[示例配置文件]在当前目录创建一个 porter-ci.config.json 文件。
           - 执行复制文件操作。
         - 如果用户选择不创建，提示用户稍后手动创建配置文件，ci 工具退出并停止运行。
   - 读取配置文件中 源项目的名称、分支名称。提示用户源项目的名称、分支名称。
@@ -75,7 +75,7 @@ porter 工具产品需求文档
     - 全部检查成功，继续下一步。
 - 以上任意检查一旦不通过，抛错提示用户做出相应修改
   - 检查阶段抛错后，ci 工具退出并停止运行，不继续执行同步代码。
-  - 用户需要重新执行 porter 命令。
+  - 用户需要重新执行 porter-ci 命令。
   - 以上`启动工具-读取并检查信息`过程，用户重复执行，直至用户信息全部校验通过，再进行下一步
 - 检查通过后，提示用户检查通过，进行同步流程。
 
@@ -108,7 +108,7 @@ porter 工具产品需求文档
       - 如果检测到冲突标记，就是认为是合并冲突导致的报错，提示用户手动解决合并冲突。
   - 如果成功，使用 `git add .` 将代码暂存，然后再执行下一次提交。
   - 如此往复，直到全部提交完成。
-- porter 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
+- porter-ci 只负责代码的同步，不负责代码的`git commit`和推送远程分支。
 - 同步完成后，提示用户同步完成，提示用户需人工确认代码并提交代码。
 - 最后退出程序。
 
@@ -122,14 +122,14 @@ porter 工具产品需求文档
 - 使用 eslint 工具检查代码质量。
 - 使用 prettier 工具格式化代码。
 - 使用 git 命令行工具实现代码的同步。
-- 在项目中集成 husky+lint-staged+prettier+eslint+@commitlint/cli + conventional 规则 的工具，用于提高代码质量，规范提交信息。要求如下：
+- 在项目中集成 husky+lint-staged+prettier+eslint+commitlint 的工具，用于提高代码质量，规范提交信息。要求如下：
   - husky 使用 7.0.x 版本
   - lint-staged 使用 9.0.x 版本
   - prettier 使用 2.5.X 版本
 
 ## 项目规范
 
-- package.json 中必须包含 `bin` 字段，指定 cli 命令的名称为 `porter`。
+- package.json 中必须包含 `bin` 字段，指定 cli 命令的名称为 `porter-ci`。
 - package.json 文件需要包含项目必要的信息
   - 例如：项目名称、项目描述、项目版本、项目依赖、启动调试打包等脚本命令。
   - 保证开发者可以方便地开发、调试 cli 工具。
@@ -139,4 +139,4 @@ porter 工具产品需求文档
 
 <!-- 参考链接 -->
 
-[示例配置文件]: /src/template/porter.config.json
+[示例配置文件]: /src/template/porter-ci.config.json
