--- a/需求文档/智能解决冲突方案分析.md
+++ b/需求文档/智能解决冲突方案分析.md
@@ -1,4 +1,4 @@
-智能冲突解决是一个非常有价值的方向，尤其对于跨项目代码同步这类频繁涉及 cherry-pick 操作的场景。针对 porter 工具，我设计了一套**分层智能冲突解决方案**，结合规则引擎、历史学习和语义分析，在确保准确性的同时提升自动化程度。
+智能冲突解决是一个非常有价值的方向，尤其对于跨项目代码同步这类频繁涉及 cherry-pick 操作的场景。针对 porter-ci 工具，我设计了一套**分层智能冲突解决方案**，结合规则引擎、历史学习和语义分析，在确保准确性的同时提升自动化程度。
 
 ### 一、核心设计思路
 
