docs: 设计版本发布工作流

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -112,6 +112,85 @@ porter-ci 工具产品需求文档
 - 同步完成后，提示用户同步完成，提示用户需人工确认代码并提交代码。
 - 最后退出程序。
 
+## 版本发布
+
+### 发布流程
+
+- 版本发布遵循 semver 规范。
+- 借助**release-it**实现本地版本自动化处理
+  - 先本地开发验证最终打 tags,再推送 tags
+  - `release-it` 的使用
+    - 添加 npm script 到 package.json 中，如下：
+      ```json
+      {
+        "scripts": {
+          "release": "release-it"
+        }
+      }
+      ```
+    - conventional-changelog（通过插件集成）
+      - 基于 commit 规范自动生成 CHANGELOG
+- 借助 GitHub Actions 基于 tag 触发发布 → 解耦开发与发布。
+- 开发 → 提 PR → 合并到 main（不发布）
+- 准备发布时，本地运行 `pnpm run release`
+  - 分析 commit 决定版本号（patch/minor/major）
+  - bump version
+  - 自动生成 changelog
+  - 打本地 tag(如 v1.2.3)
+  - **不会**自动推送到远程,手动推送（确认无误后）
+  - **注意**此过程借助**release-it**实现
+    - 在 release-it 配置中显式禁用自动 push
+      - 示例配置文件内容如下：
+        ```json
+        {
+          "git": {
+            "push": false,
+            "commitMessage": "chore(release): v${version}"
+          },
+          "npm": {
+            "publish": false
+          }
+        }
+        ```
+      - 在 CI 中校验 tag 是否由 release-it 生成
+        - 可通过正则检查 tag 是否匹配 v\d+\.\d+\.\d+，避免误触发。
+- 运行 `git push --follow-tags origin main`
+- GitHub Actions 检测到 tag → 自动：
+  - 触发 GitHub Actions 工作流程
+  - 工作流程中包含以下步骤：
+    - 检查 tag 是否符合 semver 规范
+    - 安装项目依赖
+    - 构建项目 `pnpm run build`
+    - 发布项目到 npm registry
+      - 注意用**npm 而不是 pnpm**`npm publish --access public`
+    - 创建 GitHub Release 页面（含 changelog）
+  - 注意 ci 工具的 node 版本应该和项目的 node 版本保持一致。
+
+### 发布注意事项
+
+- 发布前，确保项目的代码已经提交到远程仓库，并且所有的变更都已经合并到 main 分支。
+- 发布前，确保项目的依赖已经安装完成，并且项目的代码可以正常构建。
+- 本地充分测试后再打 tag
+  - 确保 npm pack 能生成正确的 tarball
+  - 本地运行 npm publish --dry-run（模拟发布）
+  - 确认 CHANGELOG.md 和版本号正确
+- 考虑“两阶段发布”
+  - 第一阶段：推一个 预发布 tag（如 v1.2.0-beta.1）
+    - 验证 CI 全流程成功
+  - 第二阶段：打正式 tag v1.2.0
+- 关键原则：
+  - Tag 即承诺
+    - **不要删除远程 tag**（破坏历史，对协作者不友好）
+    - 一旦推送 tag，就应视为“准备发布”，需确保流程高可靠
+  - 版本号不可重用
+    - 不能使用已发布的版本号，避免版本号冲突。
+    - 累增即可，如 v1.2.0 发布失败，解决完问题，就再下一个版本号为 v1.2.1，依此类推。不要重复使用 v1.2.0 这个版本号。
+  - 本地验证优先
+    - 确保在发布前，本地已经测试通过，没有问题。
+  - ci 配置要健壮
+    - 确保 ci 配置文件中包含必要的步骤，例如：安装依赖、构建项目、发布项目等。
+    - 确保 ci 配置文件中没有错误，例如：语法错误、配置错误等。
+
 ## 技术栈
 
 - 使用 node.js 实现工具的功能。node 版本需要 22 版本以上，建议使用 22.18.0 版本。
