docs: 完善发布流程文档

--- a/需求文档/工具产品需求文档.md
+++ b/需求文档/工具产品需求文档.md
@@ -171,8 +171,9 @@ porter-ci 工具产品需求文档
 - 发布前，确保项目的代码已经提交到远程仓库，并且所有的变更都已经合并到 main 分支。
 - 发布前，确保项目的依赖已经安装完成，并且项目的代码可以正常构建。
 - 本地充分测试后再打 tag
-  - 确保 npm pack 能生成正确的 tarball
-  - 本地运行 npm publish --dry-run（模拟发布）
+  - 确保 `npm pack` 能生成正确的 tarball
+    - 相当于预构建，看看是否能打包出别人可以安装使用的 tar 文件
+  - 本地运行 `npm publish --dry-run`（模拟发布）
   - 确认 CHANGELOG.md 和版本号正确
 - 考虑“两阶段发布”
   - 第一阶段：推一个 预发布 tag（如 v1.2.0-beta.1）
